src/main/resources/public/css/telenote.css
@font-face {
	font-family: "Room";
	src: url("fonts/Room/Room.otf");
}

@font-face {
	font-family: "Roboto-Light";
	src: url("fonts/Roboto/Roboto-Light.ttf");
}

@font-face {
	font-family: "Roboto-LightItalic";
	src: url("fonts/Roboto/Roboto-LightItalic.ttf");
}

@font-face {
	font-family: "Roboto-Regular";
	src: url("fonts/Roboto/Roboto-Regular.ttf");
}

@font-face {
	font-family: "Roboto-Thin";
	src: url("fonts/Roboto/Roboto-Thin.ttf");
}

@font-face {
	font-family: "Roboto-ThinItalic";
	src: url("fonts/Roboto/Roboto-ThinItalic.ttf");
}

body{
	font-family: "Roboto-Light";
	padding: 0px;
	margin: 0px;
	font-size: 16px;
	background-color: #414141;
	-moz-user-select: none;
    -khtml-user-select: none;
    -webkit-user-select: none;
    user-select: none;
}

.container{
  	width: 100%;
  	padding: 0px;
  	background-color: #414141;
}

@media only screen and (max-width: 840px) {
	

	.headWrapper {
		min-width: 500px;
		width: 100%;
	  	margin: auto;
	  	height: 60px !important;
	  	background-color: #313131;
	  	position: fixed;
	  	z-index: 1;
	}

	.logoDiv {
		float: left;
		margin-top: 20px;
	}

	.logoImg {
		display: none !important;
	}

	.slogon {
		background-image: url("/img/label.png");
		width: 237px;
		height: 32px;
		display: inline-block;
		margin-left: 23px;
		margin-top: -7px !important;
		vertical-align: top;
	}

	.in-outMenu{
		float: right;
		text-align: justify;
		margin-right: 33px;
		margin-top: 20px;
		display: inline-flex;
	}

	.rgihtMenu {
		float: left;
	}

	.userImg{
		display: none;
	}

	.logMenu{
		text-align: right;
		margin-left: 10px;
		margin-top: -14px !important;
		margin-right: -20px !important;
	}

	#username {
		color: white;
		font-family: "Roboto-Light";
		font-size: 20px !important;
	}

	#logout {
		font-family: "Roboto-Thin";
		font-size: 16px !important;
		color: white;
	}

	.addNoteDiv {
		margin-top: 27px !important;
	  	margin-bottom: -29px;
	  	float: right;
	  	margin-left: 65% !important;
	}

	.minStatus {
		display: inherit !important;
		float: right;
		background-image: url('../img/ok.png');
		background-repeat: no-repeat;
		background-size: cover;
		width: 23px;
  		height: 18px;
  		margin-top: 7px;
  		font-size: 16px;
  		cursor: default;
  		color: white;
	}

	.status {
		display: none !important;
	}

	.statusDiv {
		width: 30px !important;
	}

	.welcome {
		margin-top: 80px !important;
	}

	.workDiv {
		margin-top: 110px !important;
	}
}

.headWrapper{
	min-width: 500px;
	width: 100%;
	  margin: auto;
	  height: 120px;
	  background-color: #313131;
	  position: fixed;
	  z-index: 1;
}

.logoDiv{
	float: left;
	margin-top: 20px;
}

.logoImg {
	float: left;
	background-image: url("/img/logo.png");
	width: 74px;
	height: 88px;
	display: inline-block;
	margin-left: 32px;
}

.slogon {
	background-image: url("/img/label.png");
	width: 237px;
	height: 32px;
	display: inline-block;
	margin-left: 23px;
	margin-top: 26px;
	vertical-align: top;
}

.in-outMenu{
	float: right;
	text-align: justify;
	margin-right: 33px;
	margin-top: 20px;
	display: inline-flex;
}

.rgihtMenu {
	float: left;
}

.userImg{
	float: left;
	width: 80px;
	height: 80px;
	margin-left: 19px;
	background-image: url('../img/user.png');
	background-size: cover;
}

.logMenu{
	text-align: right;
	margin-left: 10px;
}

#username {
	color: white;
	font-family: "Roboto-Light";
	font-size: 24px;
}

#logout {
	font-family: "Roboto-Thin";
	font-size: 20px;
	color: white;
}

.addNote {	
	float: right;
  	cursor: pointer;
  	background-image: url("../img/addBtn.png");
  	width: 61px;
  	height: 63px;
}

.addNoteDiv {
	margin-top: 88px;
  	margin-bottom: -29px;
  	float: right;
  	position: fixed;
 	margin-left: 55%;
}

.status {
	color: #a1a1a1;
	cursor: default;
	font-family: "Roboto-LightItalic";
	font-size: 18px;
}

.statusDiv {
	float: right;
	margin-right: 12px;
	width: 200px;
	text-align: right;
}

.minStatus {
	display: none;
}

a:hover {
	color: white;
}

.noteManager{
	margin-left: 20px;
	float: left;
}

#normalize{
	margin-top: 0px;
}

.centrum{
	display: inline-block;
	text-align: center;
	border-color: black;
}

.workDiv{
	width: 100%;
  	display: inherit;
  	margin-top: 170px;
  	padding-left: 50px;
  	padding-right: 50px;
  	text-align: center;
}

.noteDiv{
	width: 100%;
	display: inline-block;
}

.cell{
	vertical-align: top;
	min-width: 270px;
	max-width: 600px;
	width: 31%;
	height: 250px;
	background-color: #f5f5f5;
	margin-right: 10px;
 	margin-left: 10px;
	margin-bottom: 25px; 
	display: inline-block;
}

.lastcell {
	margin-right: 0% !important;
}

.delBtn, .shaBtn, .edBtn{
	float: left;
	width: 89px;
	height: 57px;
	background-color: #f5f5f5;
	border: 0px;
	background-repeat: no-repeat;
	background-position: center;
}

.delBtn:focus, .shaBtn:focus, .edBtn:focus {
	outline: none;
}

.delBtn {
	background-image: url("../img/delBtn.png");
}

.shaBtn {
	background-image: url("../img/shareBtn.png");
}

.edBtn {
	background-image: url("../img/editBtn.png");
	float: right;
}

.content {
	height: 193px;
	padding: 10px;
}

.cell button:hover {
	background-color: #e2e2e2;
}

.content textarea {

	font-family: "Roboto-Light";
	font-size: 20px;
	resize: none;
	width: 100%;
	height: 100%;
	background-color: #f5f5f5;
	border: none;
	color: #000000;
}

.content textarea:active,
.content textarea:focus, 
.content textarea {
	border: none;
	outline: none;
}

.welcome {
	text-align: center;
	margin: auto;
	margin-top: 140px;
	font-family: "Roboto-bold";
	color: #FFFFFF;
	width: 80%;
}

.emptyMain {
	text-align: center;
	margin-top: 50px;
}



.dropdown-menu .divider {
  height: 1px;
  margin: 9px 0;
  overflow: hidden;
  background-color: #f74e19;
}

#emptyList {
	color: white;
}

